# DragonBurn

./: .gitattributes  .gitignore  CMakeLists.txt  DragonBurn.sln  README.md  todo.txt
.github/workflows/: build-check.yml  issues.yml  pull-request.yml
DragonBurn/: AssemblyInfo.rc  Bone.h  Cheats.cpp  DragonBurn.vcxproj  DragonBurn.vcxproj.filters  Entity.h  Game.cpp  Game.h  MenuConfig.hpp  Offsets.h  Render.hpp  View.hpp  main.cpp  resource.h
DragonBurn-kernel/: DragonBurn-kernel.inf  DragonBurn-kernel.vcxproj  DragonBurn-kernel.vcxproj.filters  Functions.c  IOCTL.h  Kernel.h  KernelApi.h  Memory.c  Memory.h  Resource.rc  main.c
DragonBurn/Config/: ConfigMenu.cpp  ConfigMenu.h  ConfigSaver.cpp  ConfigSaver.h  ConfigSaver.hpp  MenuConfig.hpp
DragonBurn/Configs/: ConfigManager.cpp  ConfigManager.h  ConfigSystem.cpp  ValuesHandler.cpp  ValuesHandler.h
DragonBurn/Core/: Cheats.cpp  Cheats.h  Config.h  GUI.h  GlobalVars.cpp  GlobalVars.h  Globals.hpp  Init.h  MemoryManager.cpp  MemoryManager.h  MemoryMgr.cpp  MemoryMgr.h  Offsets.cpp  Offsets.h  Render.h  Render.hpp  Setup.cpp  Setup.h
DragonBurn/Features/: Aimbot.cpp  Aimbot.h  BombTimer.h  ESP.h  GUI.h  Legitbot.hpp  Misc.cpp  Misc.h  RCS.cpp  RCS.h  Radar.cpp  SpectatorList.h  TriggerBot.cpp  TriggerBot.h
DragonBurn/Game/: Bone.cpp  Entity.cpp  Entity.h  Game.cpp  Game.h  View.hpp
DragonBurn/Helpers/: KeyManager.h  Logger.cpp  Logger.h  WebApi.h  WebRequest.cpp  WebRequest.h
DragonBurn/Libs/curl/lib/: libcurl.lib
DragonBurn/Libs/zlib/lib/: zlib.lib
DragonBurn/OS-ImGui/: OS-ImGui.cpp  OS-ImGui_Base.cpp  OS-ImGui_Base.h  OS-ImGui_External.cpp  OS-ImGui_External.h
DragonBurn/OS-ImGui/imgui/: imgui.cpp
DragonBurn/Offsets/: Client.hpp  Offsets.cpp  Offsets.h
DragonBurn/OffsetsList/: Client.hpp  Offsets.hpp
DragonBurn/Resources/: Images.hpp  Language.h  Language.hpp  Resource.rc
DragonBurn/Utils/: ConfigMenu.cpp  ConfigSaver.cpp
DragonBurn_kernel/: DragonBurn_kernel.inf  DragonBurn_kernel.vcxproj  DragonBurn_kernel.vcxproj.filters  Kernel.h  Logger.h  Memory.cpp  funcs.cpp  main.cpp  memory.cpp
